# fhue

./: .travis.yml  Changelog.md  LICENSE  README.md  fhue.cabal  release-mac.sh  stack.yaml
app/: Main.hs
src/FHue/: AilTypes.hs  Class.hs  Completion.hs  Display.hs  FakeHdfs.hs  Hue.hs  Shell.hs  Types.hs
src/Network/Wreq/: Extras.hs
src/System/: Keychain.hs
test/: test.hs
