name:                fhue
version:             0.1.2.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/madjar/fhue#readme
license:             BSD3
license-file:        LICENSE
author:              Georges Dubus
maintainer:          georges.dubus@compiletoi.net
copyright:           2015 Georges Dubus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FHue.Hue
                     , FHue.Types
                     , FHue.Shell
                     , FHue.AilTypes
                     , FHue.Completion
                     , FHue.FakeHdfs
  other-modules:       Network.Wreq.Extras
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , mtl
                     , aeson
                     , bytestring
                     , transformers
                     , split
                     , extra
                     , haskeline
                     , filepath
                     , containers
                     , connection
                     , http-client
                     , http-client-openssl
                     , HsOpenSSL
                     , data-default
                     , http-types
                     , text
                     , conduit
                     , conduit-extra
                     , ascii-progress
                     , http-conduit
                     , resourcet
                     , process

  default-language:    Haskell2010

executable fhue
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fhue
                     , optparse-simple
                     , boxes
                     , process
                     , transformers
                     , extra
                     , regex-tdfa
                     , haskeline
                     , concurrent-output
  other-modules:       Paths_fhue
  default-language:    Haskell2010

test-suite fhue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , fhue
                     , tasty
                     , tasty-hunit
                     , haskeline
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/madjar/fhue
